# Space-Projects

./: .gitignore  .gitmodules  README.md
Orbital-Mechanics-Simulator/: CMakeLists.txt  README.md
Orbital-Mechanics-Simulator/include/core/: Body.h  Universe.h  Vector3D.h
Orbital-Mechanics-Simulator/include/physics/: PhysicsEngine.h
Orbital-Mechanics-Simulator/include/rendering/: Renderer.h
Orbital-Mechanics-Simulator/include/simulation/: SimulationController.h
Orbital-Mechanics-Simulator/include/ui/: GUI.h
Orbital-Mechanics-Simulator/src/core/: Body.cpp  Universe.cpp  Vector3D.cpp
Orbital-Mechanics-Simulator/src/physics/: PhysicsEngine.cpp
Orbital-Mechanics-Simulator/test/core/: test_Body.cpp  test_Universe.cpp  test_Vector3D.cpp
Orbital-Mechanics-Simulator/test/physics/: test_PhysicsEngine.cpp
